# mdsfest-opensource-mds

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  reports  requirements.txt  setup.cfg  setup.py
.cursor/rules/: python.mdc
.dg/: schema.json
airflow_project/: .gitignore  AIRFLOW_ASSETS_README.md  Dockerfile  MIGRATION_GUIDE.md  PLAN.md  QUICK_FIX_VARIABLES.md  README.md  requirements.txt  setup_airflow_variables.py
airflow_project/.astro/: config.yaml  dag_integrity_exceptions.txt
airflow_project/.claude/: settings.local.json
airflow_project/dags/: assets_pipeline.py  opensource_mds_pipeline_single_taskflow.py
airflow_project/dags/task_groups/: raw_data_group.py
airflow_project/include/: __init__.py
airflow_project/include/config/: airflow_variables.json
airflow_project/include/operators/: __init__.py  dbt_operator.py  download_extract_operator.py  duckdb_operator.py  sling_operator.py
airflow_project/include/utils/: __init__.py  constants.py
dagster_project/: Makefile  README.md  pyproject.toml  setup.py
dagster_project/opensource_mds/: definitions.py
dagster_project/opensource_mds/components/: __init__.py  csv_to_duckdb.py  data_combiner.py  table_copier.py
dagster_project/opensource_mds/defs/: assets.py  constants.py  resources.py
dagster_project/opensource_mds/defs/birds/: bird_checklist.py  defs.yaml
dbt_project/: .user.yml  dbt_project.yml  package-lock.json  profiles.yml
dbt_project/models/: all_birds.sql  daily_tickets.sql  sources.yml  top_birds_by_year.sql  top_toots.sql  usgs_test.sql
dbt_project/reports/: package-lock.json  package.json
dbt_project/reports/pages/: about.md  index.md
opensource_mds/: __init__.py  assets.py  constants.py  definitions.py  resources.py
opensource_mds/defs/: assets.py  constants.py  resources.py
opensource_mds/defs/birds/checklist_2020/: component.yaml
opensource_mds/defs/birds/checklist_2023/: component.yaml
