[project]
name = 'opensource-mds'
version = '1.0.0'
requires-python = ">=3.11"
dependencies = [
	"dagster>=1.10.16",
	"dagster-dbt",
	"dagster-duckdb",
	"dagster-embedded-elt",
	"dagster-webserver",
	"duckdb",
	"dbt-duckdb",
	"numpy",
	"polars",
	"requests",
	"pyarrow"
	]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "opensource_mds"

# Add dg configuration
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "opensource_mds"
code_location_target_module = "opensource_mds.definitions"

[tool.dg.project.python_environment]
uv_managed = true 
